--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <h1>Hello worls</h1>
+  <h1>Hello! Welcome </h1>
+  <h1>Type Website in the URL to view my travel website</h1>
+  
 </html>
